--- a/cmpt-295-sfu-计算机系统导论.org
+++ b/cmpt-295-sfu-计算机系统导论.org
@@ -244,11 +244,65 @@ static void _free(void *ptr) {
 
 N位Base进制的数字的最大值是 $Base^{N-1}$
 
+*** 十进制 -> B进制
+
+$B^n, B^{n-1},  B^{n-2} , .. , B^0$
+
+十进制num转B进制, 从小于num的最大的 $k*B^n$ 开始, k就是最高位.
+然后对 $num - k * B^n$ 做相同的计算, 得到num的下一位.
+
+
+** L2 内存
+
+
+内存可以看作是一个大数组, 这个数组的索引被称作地址.
+
+因此地址也是一个数字,可以被存放到内存中.
+
+而且有些值无法用一个字节表示(>256),因此需要将多个字节看作一个"整体"来表示一个数.
+
+
+*机器字Word* 通常指的就是这多个字节组成的整体,它的长度和其能表示的最大地址范围有关.
+
+eg: x86系统使用了 *64位* 的机器字. 因此其能表示的最大地址空间是 $2^64$ . 这是一个相当大的数字, 实际不会用到这么多内存. 因此实际的地址长度是48位.
+
+
+即便内存是按照机器字的大小被划分成一小块一小块, 但是其地址仍然是以字节为单位来表示的.
+eg: 0x00 和 0x08
+
+#+attr_html: :width 420px
+[[file:org-images/2023-05-20_22-17-16_screenshot.png]]
 
 
 
+用机器字作为基本单元来表示数据时,对那些较小的数可能会导致空间的浪费, eg: 数字1只使用了机器字的第一个字节,但总体上来看还是可以接受的.
+
+每行表示一个机器字word.每个格子表示一个字节byte.
 
 
+#+attr_html: :width 320px
+[[file:org-images/2023-05-20_22-30-04_screenshot.png]]
+
+
+指针就是存放着地址的内存单元. 因此指针类型的长度通常和word相同
+
+
+下面这个例子是采用大端表示. 左上角是第0个字节.
+~0x01f8~ 的高字节0x00先被存储, f8这个字节最后存储.
+
+#+attr_html: :width 320px
+[[file:org-images/2023-05-20_22-34-11_screenshot.png]]
+
+
+*** 对齐
+
+K字节的基本对象的地址必须按照K字节对齐.
+
+2字节对象, 地址最后一位是 0.
+4字节对象, 地址最后2位是 00.
+8字节对象, 地址最后3位是 000.
+
+*** 字节序
 
 
 
